--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -53,11 +53,11 @@
       "metadata": {
         "id": "Ivafqztuo-Os",
         "colab_type": "code",
+        "outputId": "46f20ee1-5d4d-4337-db19-7da541677ada",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        },
-        "outputId": "54236ee0-d186-4c49-f508-f6ac3725e095"
+        }
       },
       "source": [
         "#get the URLs of the news sites\n",
@@ -123,7 +123,7 @@
         "len(result_url_list)\n",
         "\n"
       ],
-      "execution_count": 59,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 59
+          "execution_count": 5
         }
       ]
     },
@@ -153,16 +153,12 @@
       "metadata": {
         "id": "t60DWdLQpTfg",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 135
-        },
-        "outputId": "14ae0c4e-0280-4c63-9ea6-58248bc716ac"
+        "colab": {}
       },
       "source": [
-        "# run keyword(s) counter, create output table\n",
+        "# get the texts from each URLs\n",
         "\n",
-        "table = {'name': [], 'number of mentioning':[] , 'website size':[],'url':[] }\n",
+        "corpus = []\n",
         "\n",
         "for url in result_url_list:\n",
         "  try: \n",
@@ -171,18 +167,57 @@
         "  except:\n",
         "   pass\n",
         "  \n",
-        "  redditAll = soup.find_all(\"a\")\n",
-        "  #soup.prettify()\n",
-        "  keywords=['corona','Corona','coronavirus','corona virus','Corona Virus', 'Coronavirus', 'COVID', 'COVID-19']\n",
+        "  stripped_text=soup.get_text()\n",
+        "  corpus.append(stripped_text)  \n",
+        "\n",
+        "   "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ftGN1AITF3hO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#clear the text, remove special charachters\n",
+        "\n",
+        "def remove_special_characters(text, remove_digits=False):\n",
+        "    pattern = r'[^a-zA-z0-9\\s]' if not remove_digits else r'[^a-zA-z\\s]'\n",
+        "    text = re.sub(pattern, '', text)\n",
+        "    return text\n",
+        "\n",
+        "remove_special_characters(\"Well this was fun! What do you think? 123#@!\", \n",
+        "                          remove_digits=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "svkmk540GGpZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# run keyword(s) counter, create output table\n",
+        "\n",
+        "table = {'name': [], 'number of mentioning':[] , 'website size':[],'url':[] }\n",
+        "\n",
+        "keywords=['corona','Corona','coronavirus','corona virus','Corona Virus', 'Coronavirus', 'COVID', 'COVID-19']\n",
         "  out=[]\n",
         "\n",
         "  for i in keywords:\n",
         "    x = soup.find_all(string=re.compile('i'))\n",
         "    out.append(x)\n",
         "\n",
-        "   counter = 0\n",
-        "   for item in out:\n",
-        "    counter += 1\n",
+        "  counter = 0\n",
+        "  for item in out:\n",
+        "   counter += 1\n",
         "  \n",
         "  print(url)\n",
         "  print(len(redditAll))\n",
@@ -197,35 +232,6 @@
         "output_df = pd.DataFrame(data = table)\n",
         "print(output_df)\n",
         "  "
-      ],
-      "execution_count": 64,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-64-a2203340412e>\"\u001b[0;36m, line \u001b[0;32m20\u001b[0m\n\u001b[0;31m    counter = 0\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wvmhfaKfoPuP",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "basic=requests.get('http://www.cnn.com').text\n",
-        "soup=BeautifulSoup(basic, 'html.parser')\n",
-        "soup.prettify()\n",
-        "\n",
-        "\n",
-        "x = soup.find_all(string=re.compile('cnn'))\n",
-        "print(x)\n",
-        "len(x)"
       ],
       "execution_count": 0,
       "outputs": []
