--- a/web_scraping_ok.ipynb
+++ b/web_scraping_ok.ipynb
@@ -43,7 +43,7 @@
         "\n",
         "Then, according to a pre-defined '**keywords**' list, the script counts the number of mentioning of all the keywords and put the numbers in an **output table**.\n",
         "\n",
-        "The output table contains the name & and the exact URL of the corresponding website, the number of the keywords total appearances and a proxy for the size of the site (the last in order to get some comparable measure).\n",
+        "The output table contains the name & the exact URL of the corresponding website, the number of the keywords' total appearances and a proxy for the size of the site (the last in order to get some comparable measure).\n",
         "\n",
         "Finally, in the last section the output table is saved on Google Drive. After that, the saved file is intended to import into Tableau to create a visualization of the results."
       ]
