--- a/web_scraping_ok.ipynb
+++ b/web_scraping_ok.ipynb
@@ -206,7 +206,7 @@
         "colab": {}
       },
       "source": [
-        "#mounting google drive - need to be run only for the first time!\n",
+        "#mounting google drive\n",
         "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
@@ -219,12 +219,17 @@
       "metadata": {
         "id": "qh7nJCdTS5DC",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "508e080f-6b7a-4d8d-f1d8-d731e7070a49",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
       },
       "source": [
         "#save the output table\n",
         "\n",
         "timestr = time.strftime(\"%Y%m%d\")\n",
+        "filename = 'heatmap' + timestr + '.csv'\n",
         "\n",
         "with open('heatmap' + timestr + '.csv', 'w', newline='') as csvfile:\n",
         "    heatmap = csv.writer(csvfile, delimiter=';', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
@@ -233,10 +238,23 @@
         "        heatmap.writerow(output_df[name])\n",
         "\n",
         "print(timestr)\n",
-        "\n"
+        "print(filename)\n",
+        "\n",
+        "#save output table as .csv to google drive\n",
+        "\n",
+        "!cp heatmap20200503.csv \"drive/My Drive/heatmap\""
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "20200503\n",
+            "heatmap20200503.csv\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
