--- a/web_scraping_ok.ipynb
+++ b/web_scraping_ok.ipynb
@@ -53,7 +53,11 @@
       "metadata": {
         "id": "Ivafqztuo-Os",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        },
+        "outputId": "2e5ab1ed-2f9a-4b19-e195-a033ce80df1a"
       },
       "source": [
         "#get the URLs of the news sites\n",
@@ -119,8 +123,30 @@
         "len(result_url_list)\n",
         "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['http://www.ebizmba.com/', 'http://www.ebizmba.com/directory#admin', 'http://www.ebizmba.com/directory#design', 'http://www.ebizmba.com/directory#marketing', 'http://www.ebizmba.com/directory#ecommerce', 'http://www.ebizmba.com/directory', 'http://www.ebizmba.com/directory#media', 'http://www.ebizmba.com/directory#research', \"javascript:bookmarksite('eBizMBA | The eBusiness Knowledgebase', 'http://www.ebizmba.com')\", 'http://www.ebizmba.com/terms', 'http://www.ebizmba.com/privacy', 'http://news.yahoo.com', 'http://siteanalytics.compete.com/news.yahoo.com', 'http://quantcast.com/news.yahoo.com', 'http://www.alexa.com/siteinfo/news.yahoo.com/', 'http://news.google.com', 'http://siteanalytics.compete.com/news.google.com', 'http://quantcast.com/news.google.com', 'http://www.alexa.com/siteinfo/news.google.com/', 'http://www.huffingtonpost.com', 'http://siteanalytics.compete.com/huffingtonpost.com', 'http://quantcast.com/huffingtonpost.com', 'http://www.alexa.com/siteinfo/huffingtonpost.com/', 'http://www.cnn.com', 'http://siteanalytics.compete.com/cnn.com', 'http://quantcast.com/cnn.com', 'http://www.alexa.com/siteinfo/cnn.com/', 'http://www.nytimes.com', 'http://siteanalytics.compete.com/nytimes.com', 'http://quantcast.com/nytimes.com', 'http://www.alexa.com/siteinfo/nytimes.com/', 'http://www.foxnews.com', 'http://siteanalytics.compete.com/foxnews.com', 'http://quantcast.com/foxnews.com', 'http://www.alexa.com/siteinfo/foxnews.com/', 'http://www.nbcnews.com', 'http://siteanalytics.compete.com/nbcnews.com', 'http://quantcast.com/nbcnews.com', 'http://www.alexa.com/siteinfo/nbcnews.com/', 'http://www.dailymail.co.uk', 'http://siteanalytics.compete.com/dailymail.co.uk', 'http://quantcast.com/dailymail.co.uk', 'http://www.alexa.com/siteinfo/dailymail.co.uk', 'http://www.washingtonpost.com', 'http://siteanalytics.compete.com/washingtonpost.com', 'http://quantcast.com/washingtonpost.com', 'http://www.alexa.com/siteinfo/washingtonpost.com/', 'http://www.theguardian.com', 'http://siteanalytics.compete.com/theguardian.com', 'http://quantcast.com/theguardian.com', 'http://www.alexa.com/siteinfo/theguardian.com/', 'http://www.wsj.com', 'http://siteanalytics.compete.com/wsj.com', 'http://quantcast.com/wsj.com', 'http://www.alexa.com/siteinfo/wsj.com/', 'http://www.abcnews.go.com', 'http://siteanalytics.compete.com/abcnews.go.com', 'http://quantcast.com/abcnews.go.com', 'http://www.alexa.com/siteinfo/abcnews.go.com/', 'http://news.bbc.co.uk', 'http://siteanalytics.compete.com/news.bbc.co.uk', 'http://quantcast.com/news.bbc.co.uk', 'http://www.alexa.com/siteinfo/news.bbc.co.uk/', 'http://www.usatoday.com', 'http://siteanalytics.compete.com/usatoday.com', 'http://quantcast.com/usatoday.com', 'http://www.alexa.com/siteinfo/usatoday.com/', 'http://www.latimes.com', 'http://siteanalytics.compete.com/latimes.com', 'http://quantcast.com/latimes.com', 'http://www.alexa.com/siteinfo/latimes.com/', 'http://www.ebizmba.com/articles/best-flash-sites', 'http://www.ebizmba.com/articles/best-html5-websites', 'http://www.ebizmba.com/articles/blogs', 'http://www.ebizmba.com/articles/business-websites', 'http://www.ebizmba.com/articles/car-websites', 'http://www.ebizmba.com/articles/coupon-websites', 'http://www.ebizmba.com/articles/dating-websites', 'http://www.ebizmba.com/articles/design-websites', 'http://www.ebizmba.com/articles/ebusiness-websites', 'http://www.ebizmba.com/articles/file-sharing-websites', 'http://www.ebizmba.com/articles/funny-websites', 'http://www.ebizmba.com/articles/gadget-websites', 'http://www.ebizmba.com/articles/game-websites', 'http://www.ebizmba.com/articles/gossip-websites', 'http://www.ebizmba.com/articles/health-websites', 'http://www.ebizmba.com/articles/job-websites', 'http://www.ebizmba.com/articles/kids-websites', 'http://www.ebizmba.com/articles/media-websites', 'http://www.ebizmba.com/articles/most-popular-websites', 'http://www.ebizmba.com/articles/movie-websites', 'http://www.ebizmba.com/articles/music-websites', 'http://www.ebizmba.com/articles/news-websites', 'http://www.ebizmba.com/articles/people-search', 'http://www.ebizmba.com/articles/personal-finance-websites', 'http://www.ebizmba.com/articles/photo-sharing-sites', 'http://www.ebizmba.com/articles/political-websites', 'http://www.ebizmba.com/articles/real-estate-websites', 'http://www.ebizmba.com/articles/recipe-websites', 'http://www.ebizmba.com/articles/reference-websites', 'http://www.ebizmba.com/articles/science-websites', 'http://www.ebizmba.com/articles/search-engines', 'http://www.ebizmba.com/articles/seo-websites', 'http://www.ebizmba.com/articles/shopping-websites', 'http://www.ebizmba.com/articles/social-bookmarking-websites', 'http://www.ebizmba.com/articles/social-networking-websites', 'http://www.ebizmba.com/articles/sports-websites', 'http://www.ebizmba.com/articles/travel-websites', 'http://www.ebizmba.com/articles/video-game-websites', 'http://www.ebizmba.com/articles/video-websites', 'http://www.ebizmba.com/articles/viral-sites', 'http://www.ebizmba.com/articles/web-2.0-websites', 'http://www.ebizmba.com/articles/web-hosting', 'http://www.ebizmba.com/company', 'http://www.ebizmba.com/contact']\n",
+            "['http://news.yahoo.com', 'http://news.google.com', 'http://www.huffingtonpost.com', 'http://www.cnn.com', 'http://www.nytimes.com', 'http://www.foxnews.com', 'http://www.nbcnews.com', 'http://www.dailymail.co.uk', 'http://www.washingtonpost.com', 'http://www.theguardian.com', 'http://www.wsj.com', 'http://www.abcnews.go.com', 'http://news.bbc.co.uk', 'http://www.usatoday.com', 'http://www.latimes.com']\n",
+            "115\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -156,14 +182,18 @@
       "metadata": {
         "id": "svkmk540GGpZ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "a474baff-f86a-4a83-9e7a-f0b1b49665e7"
       },
       "source": [
         "# run keyword(s) counter, create output table\n",
         "\n",
         "table = {'name': [], 'number of mentioning':[] , 'site size': [],'url':[] }\n",
         "\n",
-        "keywords=['corona','Corona','coronavirus','corona virus','Corona Virus', 'Coronavirus', 'COVID', 'COVID-19']\n",
+        "keywords=['corona','Corona','coronavirus','corona virus','Corona Virus', 'Coronavirus', 'COVID', 'COVID-19','Covid']\n",
         "\n",
         "for url in result_url_list:\n",
         "  try: \n",
@@ -175,7 +205,7 @@
         "  counter=0\n",
         "\n",
         "  for i in keywords:\n",
-        "   y=len(soup.find_all(text=re.compile(i)))\n",
+        "   y=len(soup.body.find_all(text=re.compile(i)))\n",
         "   counter += y\n",
         "  \n",
         "  size = len(soup.find_all('a'))\n",
@@ -195,8 +225,93 @@
         "\n",
         "  "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "http://news.yahoo.com\n",
+            "78\n",
+            "118\n",
+            "--\n",
+            "http://news.google.com\n",
+            "198\n",
+            "761\n",
+            "--\n",
+            "http://www.huffingtonpost.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://www.cnn.com\n",
+            "2\n",
+            "230\n",
+            "--\n",
+            "http://www.nytimes.com\n",
+            "38\n",
+            "128\n",
+            "--\n",
+            "http://www.foxnews.com\n",
+            "188\n",
+            "809\n",
+            "--\n",
+            "http://www.nbcnews.com\n",
+            "145\n",
+            "424\n",
+            "--\n",
+            "http://www.dailymail.co.uk\n",
+            "159\n",
+            "864\n",
+            "--\n",
+            "http://www.washingtonpost.com\n",
+            "65\n",
+            "562\n",
+            "--\n",
+            "http://www.theguardian.com\n",
+            "139\n",
+            "367\n",
+            "--\n",
+            "http://www.wsj.com\n",
+            "9\n",
+            "292\n",
+            "--\n",
+            "http://www.abcnews.go.com\n",
+            "90\n",
+            "321\n",
+            "--\n",
+            "http://news.bbc.co.uk\n",
+            "52\n",
+            "260\n",
+            "--\n",
+            "http://www.usatoday.com\n",
+            "25\n",
+            "152\n",
+            "--\n",
+            "http://www.latimes.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "              name  ...                            url\n",
+            "0       news.yahoo  ...          http://news.yahoo.com\n",
+            "1      news.google  ...         http://news.google.com\n",
+            "2   huffingtonpost  ...  http://www.huffingtonpost.com\n",
+            "3              cnn  ...             http://www.cnn.com\n",
+            "4          nytimes  ...         http://www.nytimes.com\n",
+            "5          foxnews  ...         http://www.foxnews.com\n",
+            "6          nbcnews  ...         http://www.nbcnews.com\n",
+            "7        dailymail  ...     http://www.dailymail.co.uk\n",
+            "8   washingtonpost  ...  http://www.washingtonpost.com\n",
+            "9      theguardian  ...     http://www.theguardian.com\n",
+            "10             wsj  ...             http://www.wsj.com\n",
+            "11      abcnews.go  ...      http://www.abcnews.go.com\n",
+            "12        news.bbc  ...          http://news.bbc.co.uk\n",
+            "13        usatoday  ...        http://www.usatoday.com\n",
+            "14         latimes  ...         http://www.latimes.com\n",
+            "\n",
+            "[15 rows x 4 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -244,7 +359,7 @@
         "\n",
         "!cp heatmap20200503.csv \"drive/My Drive/heatmap\""
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
