--- a/web_scraping_ok.ipynb
+++ b/web_scraping_ok.ipynb
@@ -53,11 +53,11 @@
       "metadata": {
         "id": "Ivafqztuo-Os",
         "colab_type": "code",
+        "outputId": "2e5ab1ed-2f9a-4b19-e195-a033ce80df1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        },
-        "outputId": "2e5ab1ed-2f9a-4b19-e195-a033ce80df1a"
+        }
       },
       "source": [
         "#get the URLs of the news sites\n",
@@ -123,7 +123,7 @@
         "len(result_url_list)\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,11 +182,11 @@
       "metadata": {
         "id": "svkmk540GGpZ",
         "colab_type": "code",
+        "outputId": "a474baff-f86a-4a83-9e7a-f0b1b49665e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "a474baff-f86a-4a83-9e7a-f0b1b49665e7"
+        }
       },
       "source": [
         "# run keyword(s) counter, create output table\n",
@@ -225,7 +225,7 @@
         "\n",
         "  "
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,10 +334,10 @@
       "metadata": {
         "id": "qh7nJCdTS5DC",
         "colab_type": "code",
-        "outputId": "508e080f-6b7a-4d8d-f1d8-d731e7070a49",
+        "outputId": "226be59f-851b-43b5-b9c2-deb9857d2ece",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 72
         }
       },
       "source": [
@@ -348,9 +348,10 @@
         "\n",
         "with open('heatmap' + timestr + '.csv', 'w', newline='') as csvfile:\n",
         "    heatmap = csv.writer(csvfile, delimiter=';', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+        "#   heatmap.writerow(['name', 'appearances','size','url'])\n",
         "\n",
-        "    for name in output_df:\n",
-        "        heatmap.writerow(output_df[name])\n",
+        "    for item in output_df:\n",
+        "        heatmap.writerow(output_df[item])\n",
         "\n",
         "print(timestr)\n",
         "print(filename)\n",
@@ -359,15 +360,45 @@
         "\n",
         "!cp heatmap20200503.csv \"drive/My Drive/heatmap\""
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "20200503\n",
-            "heatmap20200503.csv\n"
+            "20200505\n",
+            "heatmap20200505.csv\n",
+            "cp: cannot stat 'heatmap20200503.csv': No such file or directory\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nTivOWxklhaX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 171
+        },
+        "outputId": "6559378a-c3ed-4d75-e839-55643b115a1c"
+      },
+      "source": [
+        "output_df.to_csv('heatmap' + timestr + '.csv', index = 0, delimiter=';')"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-69ee672867d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moutput_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'heatmap'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtimestr\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m';'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: to_csv() got an unexpected keyword argument 'delimiter'"
+          ]
         }
       ]
     },
