--- a/web_scraping_ok.ipynb
+++ b/web_scraping_ok.ipynb
@@ -334,7 +334,7 @@
       "metadata": {
         "id": "qh7nJCdTS5DC",
         "colab_type": "code",
-        "outputId": "226be59f-851b-43b5-b9c2-deb9857d2ece",
+        "outputId": "4351894f-24ab-4946-f130-4fa3dd7a8fbf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -348,7 +348,7 @@
         "\n",
         "with open('heatmap' + timestr + '.csv', 'w', newline='') as csvfile:\n",
         "    heatmap = csv.writer(csvfile, delimiter=';', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
-        "#   heatmap.writerow(['name', 'appearances','size','url'])\n",
+        "    heatmap.writerow(['name', 'appearances','size','url'])\n",
         "\n",
         "    for item in output_df:\n",
         "        heatmap.writerow(output_df[item])\n",
@@ -360,7 +360,7 @@
         "\n",
         "!cp heatmap20200503.csv \"drive/My Drive/heatmap\""
       ],
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
