--- a/web_scraping_ok.ipynb
+++ b/web_scraping_ok.ipynb
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "Ivafqztuo-Os",
         "colab_type": "code",
-        "outputId": "2e5ab1ed-2f9a-4b19-e195-a033ce80df1a",
+        "outputId": "9a3eaf90-a94a-4e91-9160-699ae2ea8e6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
@@ -123,7 +123,7 @@
         "len(result_url_list)\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +182,7 @@
       "metadata": {
         "id": "svkmk540GGpZ",
         "colab_type": "code",
-        "outputId": "a474baff-f86a-4a83-9e7a-f0b1b49665e7",
+        "outputId": "6794f475-965e-4ae8-ddbb-8dc61a499a1b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -225,18 +225,18 @@
         "\n",
         "  "
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "http://news.yahoo.com\n",
-            "78\n",
-            "118\n",
+            "104\n",
+            "129\n",
             "--\n",
             "http://news.google.com\n",
-            "198\n",
-            "761\n",
+            "175\n",
+            "798\n",
             "--\n",
             "http://www.huffingtonpost.com\n",
             "0\n",
@@ -244,47 +244,47 @@
             "--\n",
             "http://www.cnn.com\n",
             "2\n",
-            "230\n",
+            "238\n",
             "--\n",
             "http://www.nytimes.com\n",
-            "38\n",
-            "128\n",
+            "26\n",
+            "153\n",
             "--\n",
             "http://www.foxnews.com\n",
-            "188\n",
-            "809\n",
+            "163\n",
+            "818\n",
             "--\n",
             "http://www.nbcnews.com\n",
-            "145\n",
-            "424\n",
+            "168\n",
+            "445\n",
             "--\n",
             "http://www.dailymail.co.uk\n",
-            "159\n",
-            "864\n",
+            "219\n",
+            "1230\n",
             "--\n",
             "http://www.washingtonpost.com\n",
-            "65\n",
-            "562\n",
+            "71\n",
+            "512\n",
             "--\n",
             "http://www.theguardian.com\n",
-            "139\n",
-            "367\n",
+            "126\n",
+            "385\n",
             "--\n",
             "http://www.wsj.com\n",
-            "9\n",
+            "11\n",
             "292\n",
             "--\n",
             "http://www.abcnews.go.com\n",
-            "90\n",
-            "321\n",
+            "67\n",
+            "319\n",
             "--\n",
             "http://news.bbc.co.uk\n",
-            "52\n",
-            "260\n",
+            "36\n",
+            "261\n",
             "--\n",
             "http://www.usatoday.com\n",
-            "25\n",
-            "152\n",
+            "26\n",
+            "155\n",
             "--\n",
             "http://www.latimes.com\n",
             "0\n",
@@ -334,7 +334,7 @@
       "metadata": {
         "id": "qh7nJCdTS5DC",
         "colab_type": "code",
-        "outputId": "4351894f-24ab-4946-f130-4fa3dd7a8fbf",
+        "outputId": "d4494b99-7c14-44cd-a017-e7033b9af2f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -358,15 +358,15 @@
         "\n",
         "#save output table as .csv to google drive\n",
         "\n",
-        "!cp heatmap20200503.csv \"drive/My Drive/heatmap\""
+        "#!cp heatmap20200503.csv \"drive/My Drive/heatmap\""
       ],
-      "execution_count": 15,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "20200505\n",
-            "heatmap20200505.csv\n",
+            "20200506\n",
+            "heatmap20200506.csv\n",
             "cp: cannot stat 'heatmap20200503.csv': No such file or directory\n"
           ],
           "name": "stdout"
@@ -378,29 +378,15 @@
       "metadata": {
         "id": "nTivOWxklhaX",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 171
-        },
-        "outputId": "6559378a-c3ed-4d75-e839-55643b115a1c"
+        "colab": {}
       },
       "source": [
-        "output_df.to_csv('heatmap' + timestr + '.csv', index = 0, delimiter=';')"
+        "# output df to csv - optional\n",
+        "\n",
+        "output_df.to_csv('heatmap' + timestr + '.csv', index = 0)"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-69ee672867d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moutput_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'heatmap'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtimestr\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m';'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: to_csv() got an unexpected keyword argument 'delimiter'"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
