--- a/web_scraping_ok.ipynb
+++ b/web_scraping_ok.ipynb
@@ -267,7 +267,7 @@
         "colab": {}
       },
       "source": [
-        "#investigate the input website\n",
+        "#investigate the 'input for URLs' website\n",
         "\n",
         "url = 'http://www.ebizmba.com/articles/news-websites'\n",
         "site = request.urlopen(url)\n",
